--- a/GameTOP/GameTOP.csproj
+++ b/GameTOP/GameTOP.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Gametop.Lib\GameTop.Lib.csproj" />
+    <ProjectReference Include="..\GameTOP.Lib\GameTOP.Lib.csproj" />
     <ProjectReference Include="..\GameTOP.Interface\GameTOP.Interface.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
 </Project>
